installed omniauth but testing new params

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -7,3 +7,13 @@
   <%= form.label :password %>
   <%= form.password_field :password %>
 </div>
+
+<div class="text-field">
+  <%= form.label :name %>
+  <%= form.text_field :name, type: 'name' %>
+</div>
+
+<a href="/auth/facebook">
+  <i class="fa fa-facebook"/>
+  Log In with Facebook
+</a>
