--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,8 +1,8 @@
 <h2>Index Page</h2>
-
-<h4>You are logged in as :<%=current_user.email%></h4>
+<p><%=@notice%></p>
+<h4>You are logged in as : <%=current_user.email%></h4>
 <ul>
   <%@users.each do |user|%>
-        <li><em><%=user.email%></em></li>
+        <li><em>name: <%=user.name%> email: <%=user.email%></em></li>
   <%end%>
 </ul>
