--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -8,10 +8,10 @@
   <%= form.password_field :password %>
 </div>
 
-<div class="text-field">
+<!-- <div class="text-field">
   <%= form.label :name %>
   <%= form.text_field :name, type: 'name' %>
-</div>
+</div> -->
 
 <a href="/auth/facebook">
   <i class="fa fa-facebook"/>
