--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,10 +2,10 @@
   <h2><%= t('.title') %></h2>
 
   <%= form_for @user do |form| %>
-  <div class='text-field'>
+<!--   <div class='text-field'>
     <%= form.label :name %>
     <%= form.text_field :name, :type => 'name' %>
-  </div>
+  </div> -->
 
   <div class='text-field'>
     <%= form.label :email %>
