--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,11 +26,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project name</a>
+          <a class="navbar-brand" href="#"> KevBnB</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
+            <li><%= link_to "Home", root_url%></li>
             <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact</a></li>
             <li class="dropdown">
@@ -51,17 +51,22 @@
             <li><a href="../navbar-static-top/">Static top</a></li>
             <%if signed_in?%>
 
-              <li class="active"><%= link_to "Sign Out", sign_out_path, method: :delete%></li>
+              <li><%= link_to "Sign Out", sign_out_path, method: :delete%></li>
             <%else%>
 
-              <li class="active"><%= link_to "Sign in", sign_in_path %></li>
+              <li><%= link_to "Sign in", sign_in_path %></li>
 
             <%end%>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
-
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
     
 
   
