--- a/app/views/listings/edit.html.erb
+++ b/app/views/listings/edit.html.erb
@@ -1,2 +1,6 @@
-<h1>Listings#edit</h1>
-<p>Find me in app/views/listings/edit.html.erb</p>
+<h1>Editing Listing</h1>
+
+<%= render 'form' %>
+
+<%= link_to 'Show', @listing %> |
+<%= link_to 'Back', listings_path %>
