--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,12 +50,10 @@
             <li><%= link_to "New Listing", listings_new_path %></li>
             <li><a href="../navbar-static-top/">Static top</a></li>
             <%if signed_in?%>
-
-              <li><%= link_to "Sign Out", sign_out_path, method: :delete%><%=current_user.email%></li>
+              <li><%= link_to "Sign Out", sign_out_path, method: :delete%></li>
+              <li style="margin-top: 15px"><em><%=current_user.email%></em></li>
             <%else%>
-
               <li><%= link_to "Sign in", sign_in_path %></li>
-
             <%end%>
           </ul>
         </div><!--/.nav-collapse -->
@@ -67,11 +65,13 @@
     <br>
     <br>
     <br>
-    
+   
+
+     
 
   
   <%= yield %>
-  <div id="header">
+ <!--  <div id="header">
     <% if signed_in? -%>
       <%= button_to t(".sign_out"), sign_out_path, method: :delete %>
     <% else -%>
@@ -83,7 +83,7 @@
     <% flash.each do |key, value| -%>
       <div id="flash_<%= key %>"><%=h value %></div>
     <% end %>
-  </div>
+  </div> -->
 
   <footer class="footer">
         <p>&copy; 2015 Company, Inc.</p>
