--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-
+<%=flash[:alert]%>
 <h1>KevBnB's listings</h1>
 
 <table width=100%>
@@ -28,6 +28,7 @@
         <td><%= listing.name %></td>
         <td><%= link_to 'Show', listing %></td>
        <!--  <%if current_user == listing.user%> -->
+
           <td><%= link_to 'Edit', edit_listing_path(listing) %></td>
           <td><%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         <!-- <%end%> -->
