--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -34,6 +34,7 @@
   <strong>Name:</strong>
   <%= @listing.name %>
 </p>
-
+<%if can? :update, @listing%>
 <%= link_to 'Edit', edit_listing_path(@listing) %> |
+<%end%>
 <%= link_to 'Back', listings_path %>
