--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -27,11 +27,14 @@
         <td><%= listing.user.email %></td>
         <td><%= listing.name %></td>
         <td><%= link_to 'Show', listing %></td>
-       <!--  <%if current_user == listing.user%> -->
-
+       
+        <%if can? :update, listing%>
           <td><%= link_to 'Edit', edit_listing_path(listing) %></td>
+        <%end%>
+        <%if can? :destroy, listing%>
           <td><%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        <!-- <%end%> -->
+        <%end%>
+        
       </tr>
     <% end %>
   </tbody>
