--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,7 +52,7 @@
             <%if signed_in?%>
               <li><%= link_to "Sign Out", sign_out_path, method: :delete%></li>
               <%if !current_user.profile.nil?%>
-                <li><a href="/profiles/<%=current_user.id%>"><em><%=current_user.profile.name%></em></a></li>
+                <li><a href="/profiles/<%=current_user.profile.id%>"><%=current_user.profile.name%><%= image_tag current_user.profile.image_url(:thumb).to_s %></a></li>
               <%else%>
                 <li><a href="/profiles/new"><em>Create a profile</em></a></li>
               <%end%>  
