first commit for reservation

--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -35,6 +35,10 @@
     <%= f.label :city %><br>
     <%= f.text_field :city %>
   </div>
+  <div class="field">
+    <%= f.label :picture %><br>
+    <%= f.file_field :picture%>
+  </div>
   
   <div class="actions">
     <%= f.submit %>
