--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -1,6 +1,12 @@
 <p id="notice"><%= notice %></p>
 
 <p>
+
+  <%= image_tag @listing.picture_url(:big).to_s %>
+
+</p>
+
+<p>
   <strong>Home type:</strong>
   <%= @listing.home_type %>
 </p>
