--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -36,8 +36,8 @@
     <%= f.text_field :city %>
   </div>
   <div class="field">
-    <%= f.label :picture %><br>
-    <%= f.file_field :picture%>
+    <%= f.label :pictures %><br>
+    <%= f.file_field :pictures, multiple: true %>
   </div>
   
   <div class="actions">
