--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -47,6 +47,7 @@
   <strong>Name:</strong>
   <%= @listing.name %>
 </p>
+<%= link_to 'New Reservation', new_reservation_path(listing_id: @listing.id) %>
 <%if can? :update, @listing%>
 <%= link_to 'Edit', edit_listing_path(@listing) %> |
 <%end%>
