--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
-<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
-<!-- Optional theme -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
 <head>
+  <title>KevBnB</title>
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tag %>
 
@@ -50,13 +50,28 @@
             <li><%= link_to "New Listing", listings_new_path %></li>
             <li><a href="/listings/index">Top Listings</a></li>
             <%if signed_in?%>
-              <li><%= link_to "Sign Out", sign_out_path, method: :delete%></li>
-              <%if !current_user.profile.nil?%>
-                <li><a href="/profiles/<%=current_user.profile.id%>"><%=current_user.profile.name%></a></li>
+
+              
+              <li></li>
+                <li class="dropdown"><a href="/profiles/<%=current_user.profile.id%>" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" ><%=current_user.profile.name%> <span class="caret"></span></a>
+                  <ul class="dropdown-menu">
+                <li><%= link_to "My reservations", user_reservations_path(current_user.id) %></li>
+                <li><%= link_to "My listings", user_listings_path(current_user.id) %></li>
+                <li role="separator" class="divider"></li>
+                <li class="dropdown-header">User Profile</li>
+                  <%if !current_user.profile.nil?%>
+                     <li><%= link_to "Edit Profile", edit_profile_path(current_user.profile.id) %></li>
+                  <%else%>
+                     <li><a href="/profiles/new"><em>Create a profile</em></a></li>
+                  <%end%>
+                <li><%= link_to "Sign Out", sign_out_path, method: :delete%></li>
+              </ul>
+
+
+
+                </li>
                 <li style="margin-top: 5px"><%= image_tag current_user.profile.image_url(:thumb).to_s, class: "img-circle" %></li>
-              <%else%>
-                <li><a href="/profiles/new"><em>Create a profile</em></a></li>
-              <%end%>  
+              
             <%else%>
               <li><%= link_to "Sign in", sign_in_path %></li>
             <%end%>
@@ -77,24 +92,13 @@
 
   
   <%= yield %>
- <!--  <div id="header">
-    <% if signed_in? -%>
-      <%= button_to t(".sign_out"), sign_out_path, method: :delete %>
-    <% else -%>
-      <%= link_to t(".sign_in"), sign_in_path %>
-    <% end -%>
-  </div>
-
-  <div id="flash">
-    <% flash.each do |key, value| -%>
-      <div id="flash_<%= key %>"><%=h value %></div>
-    <% end %>
-  </div> -->
+ 
     </div>
   
 </body>
 <footer class="footer">
         <p>&copy; 2015 Company, Inc.</p>
 </footer>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-</html>
+
+<!-- Latest compiled JavaScript -->
+<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
