--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -2,16 +2,23 @@
 <%=flash[:alert]%>
 <h1>KevBnB's listings</h1>
 
+<%if @listings.blank?%>
+
+  <h4>You have not listed any listing yet</h4>
+
+<%else%>
+
 <table width=100%>
   <thead>
     <tr>
+      <th>Name</th>
       <th>Home type</th>
       <th>Room type</th>
       <th>Accommodates</th>
       <th>Address</th>
       <th>City</th>
       <th>Posted by</th>
-      <th>Name</th>
+      <th>Posted at</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -19,6 +26,7 @@
   <tbody>
     <% @listings.each do |listing| %>
       <tr>
+        <td><%= listing.name %></td>
         <td><%= listing.home_type %></td>
         <td><%= listing.room_type %></td>
         <td><%= listing.accommodates %></td>
@@ -29,7 +37,7 @@
         <%else%>
         <td><%= listing.user.email %></td>
         <%end%>
-        <td><%= listing.name %></td>
+        <td><%= listing.created_at.strftime("%D")%></td>
         <% if listing.pictures.blank? %>
         <td><%= link_to 'Show', listing %></td>
         <% else %>
@@ -46,7 +54,7 @@
     <% end %>
   </tbody>
 </table>
-
+<%end%>
 <br>
-
+<%= will_paginate @listings%><br>
 <%= link_to 'New Listing', new_listing_path %>
