--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,7 +53,13 @@
 
               
               <li></li>
-                <li class="dropdown"><a href="/profiles/<%=current_user.profile.id%>" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" ><%=current_user.profile.name%> <span class="caret"></span></a>
+                <li class="dropdown">
+                <%if !current_user.profile.blank?%>
+                  <a href="/profiles/<%=current_user.profile.id%>" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" ><%=current_user.profile.name%> <span class="caret"></span></a>
+                <% else %>
+                 <div class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" >Welcome <span class="caret"></span></div>
+                <% end %> 
+
                   <ul class="dropdown-menu">
                 <li><%= link_to "My reservations", user_reservations_path(current_user.id) %></li>
                 <li><%= link_to "My listings", user_listings_path(current_user.id) %></li>
@@ -70,7 +76,13 @@
 
 
                 </li>
-                <li style="margin-top: 5px"><%= image_tag current_user.profile.image_url(:thumb).to_s, class: "img-circle" %></li>
+             
+
+                  <% if current_user.profile.present? %>
+                    <% if current_user.profile.image.present? %>  
+                       <li style="margin-top: 5px"><%= image_tag current_user.profile.image_url(:thumb).to_s, class: "img-circle" %></li>
+                    <% end %>
+                  <% end %>
               
             <%else%>
               <li><%= link_to "Sign in", sign_in_path %></li>
