--- a/app/views/reservations/_form.html.erb
+++ b/app/views/reservations/_form.html.erb
@@ -23,7 +23,7 @@
   <%if !@host.user.profile.blank? %>
     <%=@host.user.profile.name%></p>
   <%else%>
-    <%=@host.email%>
+    <%=@host.user.email%>
   <%end%>
   
   <div class="field">
@@ -37,8 +37,13 @@
 
     <%= f.hidden_field :guest_name, value: current_user.profile.name %>
   
-  
-    <%= f.hidden_field :host_name, value: @host.user.profile.name %>
+  <%if @host.user.profile.present?%>
+    <%if @host.user.profile.name.present?%>
+      <%= f.hidden_field :host_name, value: @host.user.profile.name %>
+    <% else %>
+      <%= f.hidden_field :host_name, value: @host.user.email %>
+    <%end%>    
+  <% end %>
 
     <%= f.hidden_field :listing_id, value: @listing_id %>
   
