--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -7,17 +7,17 @@
       </ol>
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <img class="first-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="First slide">
+          <img class="tales" src="http://2.bp.blogspot.com/-XWL09_bn3xU/VnokdcmUHPI/AAAAAAAAU48/-BbhLgYIGsk/s1600/Fira%252C%2BSantorini%2BGreece.JPG" alt="First slide">
           <div class="container">
-            <div class="carousel-caption">
+            <div class="carousel-caption" id="caption-1">
               <h1>Example headline.</h1>
               <p>Note: If you're viewing this page via a <code>file://</code> URL, the "next" and "previous" Glyphicon buttons on the left and right might not load/display properly due to web browser security rules.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+              <p><a class="btn btn-lg btn-primary" href="/signup" role="button">Sign up today</a></p>
             </div>
           </div>
         </div>
         <div class="item">
-          <img class="second-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">
+          <img class="tales" src="http://content.paulreiffer.com/wp-content/uploads/2014/04/sydney-opera-house-sunrise-water-glow-orange-yellow-flare-sun-shadow-paul-reiffer-professional-landscape-photographer-solo@2x.jpg" alt="Second slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>Another example headline.</h1>
@@ -27,9 +27,9 @@
           </div>
         </div>
         <div class="item">
-          <img class="third-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
+          <img class="tales" src="http://i2.wp.com/www.thecrankywallflower.com/wp-content/uploads/2015/08/p1060351_fotor.jpg?resize=968%2C545" alt="Third slide">
           <div class="container">
-            <div class="carousel-caption">
+            <div class="carousel-caption" id="caption-3">
               <h1>One more for good measure.</h1>
               <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
               <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
@@ -46,6 +46,15 @@
         <span class="sr-only">Next</span>
       </a>
     </div><!-- /.carousel -->
+
+
+
+
+
+    <br>
+    <br>
+
+
 
 
     <!-- Marketing messaging and featurettes
