--- a/app/views/reservation_mailer/booking_host_email.html.erb
+++ b/app/views/reservation_mailer/booking_host_email.html.erb
@@ -6,7 +6,7 @@
   <body>
     <h1>Congratulations <%=@host.profile.name%>, you have a new reservation from <%=@customer.profile.name %></h1>
     <p>
-      You can see details of your new reservation here: <a href="http://localhost:3000/users/<%=@host.id%>/reservations/<%=@reservation_id%>">link</a>
+      You can see details of your new reservation here: <a href="http://localhost:3000/users/<%=@host.id%>/reservations/<%=@reservation_id%>">Click here</a>
     </p>
   </body>
 </html>
