--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -1,46 +1,55 @@
-<%= form_for(@listing) do |f| %>
-  <% if @listing.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@listing.errors.count, "error") %> prohibited this listing from being saved:</h2>
+<div class="container">
 
-      <ul>
-      <% @listing.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+  <div class="col-md-6">
+    <%= form_for(@listing) do |f| %>
+      <% if @listing.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= pluralize(@listing.errors.count, "error") %> prohibited this listing from being saved:</h2>
+
+          <ul>
+          <% @listing.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+          </ul>
+        </div>
       <% end %>
-      </ul>
-    </div>
-  <% end %>
-  
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
+      
+      
+        <%= f.label :name %><br>
+        <%= f.text_field :name, class:'form-control' %>
+      
+      
+        <%= f.label :home_type %><br>
+        <%= f.text_field :home_type, class:'form-control'  %>
+
+      
+        <%= f.label :room_type %><br>
+        <%= f.text_field :room_type, class:'form-control'  %>
+      
+      
+        <%= f.label :accommodates %><br>
+        <%= f.number_field :accommodates, class:'form-control'  %>
+      
+      
+        <%= f.label :address %><br>
+        <%= f.text_area :address, class:'form-control'  %>
+      
+      
+        <%= f.label :city %><br>
+        <%= f.text_field :city, class:'form-control'  %>
+      
+        <br>
+        <%= f.label :pictures %><br>
+        <%= f.file_field :pictures, multiple: true %>
+        <br>
+
+        <div class="actions">
+          <%= f.submit "Submit", class:"btn btn-sm btn-success btn-block" %>
+        </div>
+    <% end %>
+
+     <%= link_to 'Back', listings_path %>
   </div>
-  <div class="field">
-    <%= f.label :home_type %><br>
-    <%= f.text_field :home_type %>
-  </div>
-  <div class="field">
-    <%= f.label :room_type %><br>
-    <%= f.text_field :room_type %>
-  </div>
-  <div class="field">
-    <%= f.label :accommodates %><br>
-    <%= f.number_field :accommodates %>
-  </div>
-  <div class="field">
-    <%= f.label :address %><br>
-    <%= f.text_area :address %>
-  </div>
-  <div class="field">
-    <%= f.label :city %><br>
-    <%= f.text_field :city %>
-  </div>
-  <div class="field">
-    <%= f.label :pictures %><br>
-    <%= f.file_field :pictures, multiple: true %>
-  </div>
-  
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+</div>
+
+<nr>  
