--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,60 +1,84 @@
 <p id="notice"><%= notice %></p>
 <%=flash[:alert]%>
-<h1>KevBnB's listings</h1>
 
-<%if @listings.blank?%>
+<div class="container" >
 
-  <h4>You have not listed any listing yet</h4>
+    <h1>KevBnB's listings</h1>
 
-<%else%>
+    <%if @listings.blank?%>
 
-<table width=100%>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Home type</th>
-      <th>Room type</th>
-      <th>Accommodates</th>
-      <th>Address</th>
-      <th>City</th>
-      <th>Posted by</th>
-      <th>Posted at</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+      <h4>You have not listed any listing yet</h4>
 
-  <tbody>
-    <% @listings.each do |listing| %>
-      <tr>
-        <td><%= listing.name %></td>
-        <td><%= listing.home_type %></td>
-        <td><%= listing.room_type %></td>
-        <td><%= listing.accommodates %></td>
-        <td><%= listing.address %></td>
-        <td><%= listing.city %></td>
-        <%if !listing.user.profile.nil?%>
-        <td><%= link_to "#{ listing.user.profile.name }", profile_path(listing.user.profile) %></td>
-        <%else%>
-        <td><%= listing.user.email %></td>
-        <%end%>
-        <td><%= listing.created_at.strftime("%D")%></td>
-        <% if listing.pictures.blank? %>
-        <td><%= link_to 'Show', listing %></td>
-        <% else %>
-        <td><a href="/listings/<%=listing.id%>"><span class="glyphicon glyphicon-picture"></span></a></td>
-        <% end %>
-        <%if can? :update, listing%>
-          <td><%= link_to 'Edit', edit_listing_path(listing) %></td>
-        <%end%>
-        <%if can? :destroy, listing%>
-          <td><%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        <%end%>
-        
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-<%end%>
-<br>
+    <%else%>
+      <div class="table-responsive" id="table-listings">
+        <div >
+          <table class="table">
+            <thead>
+              <tr>
+                <th class="col-md-8">Descriptions</th>
+                <th class="col-md-2">Posted by</th>
+                <th colspan="3" class="col-md-2" id="last-column"></th>
+              </tr>
+            </thead>
+
+            <tbody>
+              <% @listings.each do |listing| %>
+                <tr>
+                    <td>
+                      <h2 class="listing-name"><%= listing.name %></h2>
+                      <p><b>Type of house:</b><%= listing.home_type %></p>
+                      <p><b>Type of room: </b><%= listing.room_type %></p>
+                      <p><b>Maximum amount of tenants: </b><%= listing.accommodates %></p>
+                      <p><b>Address: </b><%= listing.address %></p>
+                      <p><b>City: </b><%= listing.city %></p>
+                      <p><b>Posted on: </b><%= listing.created_at.strftime("%D")%></p>
+                      </td>
+
+                      <%if !listing.user.profile.nil?%>
+                         <td>
+                         <%= link_to "#{ listing.user.profile.name }", profile_path(listing.user.profile) %>
+                         <br>
+                         <br>
+                         <%= image_tag listing.user.profile.image_url(:medium).to_s, class: "img-circle" %>
+                         </td>
+                      <%else%>
+                          <td><%= listing.user.email %></td>
+                      <%end%>
+
+                      <% if listing.pictures.blank? %>
+                         <td class="last-column"><%= link_to 'Show', listing %></td>
+                      <% else %>
+                         <td class="last-column"><a href="/listings/<%=listing.id%>"><span class="glyphicon glyphicon-picture"></span></a></td>
+                      <% end %>
+
+                        <%if can? :update, listing%>
+                           <td class="last-column">
+                           <%= link_to edit_listing_path(listing) do%>
+                              <span class="glyphicon glyphicon-edit"></span>
+                           <% end %>
+                          </td>
+
+                        <%else%>
+                           <td class="last-column"></td>
+                        <%end%>
+
+                        <%if can? :destroy, listing%>
+                           <td class="last-column">
+                           <%= link_to listing, method: :delete, data: { confirm: 'Are you sure?' } do %>
+                              <span class="glyphicon glyphicon-remove"></span>
+                           <% end %>
+                              </td>
+                        <%else%>
+                            <td class="last-column"></td>
+                        <%end%>
+                  </tr>
+              <% end %>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    <%end%>
+</div>
+  <br>
 <%= will_paginate @listings%><br>
 <%= link_to 'New Listing', new_listing_path %>
