--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,37 +1,25 @@
-<div class="text-field">
-  <%= form.label :email %>
-  <%= form.text_field :email, type: 'email' %>
+<div class="container">
+
+  <div class="col-md-6 col-md-offset-3">
+
+   
+      <%= form.label :email %>
+      <%= form.text_field :email, class:'form-control'%>
+   
+
+    
+      <%= form.label :password %>
+      <%= form.password_field :password , class:'form-control'%>
+  </div>
+
 </div>
 
-<div class="password-field">
-  <%= form.label :password %>
-  <%= form.password_field :password %>
-</div>
 
-<!-- <div class="text-field">
-  <%= form.label :name %>
-  <%= form.text_field :name, type: 'name' %>
-</div> -->
 
-<a href="/auth/facebook">
-  <i class="fa fa-facebook"/>
-  Log In with Facebook
-</a>
+    <a href="/auth/facebook">
+      <i class="fa fa-facebook"/>
+      Log In with Facebook
+    </a>
 
-  <div class="container">
 
-      <form class="form-signin">
-        <h2 class="form-signin-heading">Please sign in</h2>
-        <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-        <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-        <div class="checkbox">
-          <label>
-            <input type="checkbox" value="remember-me"> Remember me
-          </label>
-        </div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-      </form>
-
-    </div> <!-- /container -->
+     
