--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,28 +1,30 @@
 <div id='clearance' class='sign-up'>
-  <h2><%= t('.title') %></h2>
+  
+    <div class="container">
 
-  <%= form_for @user do |form| %>
-<!--   <div class='text-field'>
-    <%= form.label :name %>
-    <%= form.text_field :name, :type => 'name' %>
-  </div> -->
+      <div class="col-md-6 col-md-offset-3">
+      <h2><%= t('.title') %></h2>
 
-  <div class='text-field'>
-    <%= form.label :email %>
-    <%= form.text_field :email, :type => 'email' %>
-  </div>
+          <%= form_for @user do |form| %>
 
-  <div class='password-field'>
-    <%= form.label :password %>
-    <%= form.password_field :password %>
-  </div>
+       
+          <%= form.label :email %>
+          <%= form.text_field :email, class:'form-control' %>
+        
 
-  <div class='submit-field'>
-    <%= form.submit %>
-  </div>
+       
+          <%= form.label :password %>
+          <%= form.password_field :password, class:'form-control'  %>
+       
+          <br>
+          <div>
+            <%= form.submit "Sign Up", class: "btn btn-lg btn-primary btn-block" %>
+          </div>
 
-  <div class='other-links'>
-    <%= link_to t('.sign_in'), sign_in_path %>
-  </div>
-  <% end %>
+          <div class='other-links'>
+            <%= link_to t('.sign_in'), sign_in_path %>
+          </div>
+        <% end %>
+      </div>
+    </div>
 </div>
