--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -37,6 +37,9 @@
       
         <%= f.label :city %><br>
         <%= f.text_field :city, class:'form-control'  %>
+
+        <%= f.label :pirce_per_night %> (USD)<br>
+        <%= f.number_field :price_per_night, class:'form-control' %>
       
         <br>
         <%= f.label :pictures %><br>
