--- a/app/views/transactions/new.html.erb
+++ b/app/views/transactions/new.html.erb
@@ -1,16 +1,15 @@
  <script src="https://js.braintreegateway.com/js/braintree-2.22.2.min.js"></script>
         <script>
           braintree.setup("<%=@client_token%>", "dropin", {
-            container: "payment-form"
+            container: "dropin"
           });
 
         </script>
  
-
+<p id="notice"><%= notice %></p>
 
 <%= form_tag transactions_path do%>
-  <%= render 'customer_form'  %>
-  <p>Please enter your payment details:</p>
+  
   <%= form_for(@transaction) do |f| %>  
           <% if @transaction.errors.any? %>
             <div id="error_explanation">
@@ -26,6 +25,18 @@
     <div>  
       <%= f.hidden_field :reservation_id, value: @reservation.id %>
     </div>
+
+   <p><%=@reservation.guest_name%>, thank you for making a reservation with KevBnB.</p>
+   <p>Please confirm the dates of stay before you proceed to pay with your credit card.</p>
+   <p>Reservation details:</p>
+   <br>Period of stay: <b><%= @reservation.from%></b> until <b><%=@reservation.until%></b></p>
+   <br> 
+   <p>Total amount: USD <%= @reservation.total_price%> for <%=(@reservation.until - @reservation.from).to_i%> night(s)</p>
+
+
+
+    <div id="dropin" ></div>
+
 
     <div id="payment-form">
       <%= f.submit %>
