--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+<%= javascript_include_tag 'application', 'data-turbolinks-track' => true%>
+<%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true%>
 <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
 <!-- jQuery library -->
@@ -8,95 +10,8 @@
 
 <style type="text/css">
   
-#brand-image
-{
-  height: 150%;
- 
-  width: auto;
-}
 
-#welcome{
-  margin-top: 15px;
-}
-
-#navbar{
-  font-size: 14px;
-  margin-top: 5px;
-  font-family: Courier;
-  letter-spacing: 2px;
-}
-
-.dropdown-menu{
-  letter-spacing: 0px;
-  font-size: 12px;
-}
-
-.navbar-right{
-  letter-spacing: 0.5px;
-
-}
-
-.tales {
-  width: 100%;
-}
-.carousel-inner{
-  width:100%;
-  max-height: 600px !important;
-}
-
-.carousel-caption {
-    top: 0;
-    bottom: auto;
-}
-
-#caption-1{
-  color:black;
-}
-
-#table-listings{
-  text-align: left;
-}
-#first-column{
-  text-align:right;
-}
-th {
- text-align: center;
- font-size: 18px;
- letter-spacing: 4px;
- padding: 10px;
- background-color: gray;
- color: white ;
-}
-td {
-  font-size: 14px;
-  padding: 10px;
-}
-.last-column{
-  border:none;
-}
-
-table{
-
-}
-
-.listing-name{
-  letter-spacing: 2px;
-  color: darkgray;
-  font-family: Courier;
-}
-
-.price-title{
-  color:black;
-  text-align: center;
-  padding-top:13px;
-}
-
-.table-col-name{
-  text-align: center;
-
-}
 </style>
-
 
 
 
@@ -132,7 +47,20 @@ table{
           <ul class="nav navbar-nav">
             <li><%= link_to "Home", root_url%></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>   
+            <li><a href="#contact">Contact</a></li> 
+            <li> 
+            
+             <form id="searchForm" action="/search/" method="get">
+
+              <div class="input-group">
+                  <input type="text" class="form-control-search" placeholder=" Search" name="q" id="srch-term" >
+                  <div class="input-group-btn">
+                      <button class="btn btn-default-1" type="submit"><i class="glyphicon glyphicon-search" id="search-icon"></i></button>
+                  </div>
+              </div>
+             </form>
+           
+            </li> 
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><%= link_to "New Listing", listings_new_path %></li>
@@ -182,12 +110,12 @@ table{
    <br>
 
      
-    <div class="container" style="padding-bottom:150px">
+    
 
   
   <%= yield %>
  
-    </div>
+    
   
 </body>
     <div class="container-marketing">
