--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -1,4 +1,4 @@
-<h1>New Listing</h1>
+<div class="container" id="page-header"><div class="page-header-1">New Listing</div></div>
 
 <%= render 'form' %>
 
