--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,9 +10,9 @@ footer {
 
 #brand-image
 {
-  height: 150%;
- 
-  width: auto;
+  max-height: 130px;
+  margin-top: -50px;
+  margin-right: -30px;
 }
 
 #welcome{
@@ -20,15 +20,20 @@ footer {
 }
 
 #navbar{
-  font-size: 14px;
-  margin-top: 5px;
+  font-size: 16px;
   font-family: Courier;
-  letter-spacing: 2px;
+  letter-spacing: 1.5px;
+  z-index:1;
+  :hover{
+  color:black;
+  }
 }
 
 .dropdown-menu{
   letter-spacing: 0px;
+  background: rgba(255,255,255,0.5) !important;
   font-size: 12px;
+  margin-top: 20px !important;  
 }
 
 .navbar-right{
@@ -45,12 +50,12 @@ footer {
 }
 
 .carousel-caption {
-    top: 0;
+    top: 200px;
     bottom: auto;
 }
 
 #caption-1{
-  color:black;
+  color:white;
 }
 
 #table-listings{
@@ -61,11 +66,11 @@ footer {
 }
 th {
  text-align: center;
- font-size: 18px;
- letter-spacing: 4px;
+ font-size: 15px;
+ letter-spacing: 3px;
  padding: 10px;
- background-color: gray;
- color: white ;
+ background-color: white;
+ color: lightgrey ;
 }
 td {
   font-size: 14px;
@@ -85,10 +90,17 @@ table{
   font-family: Courier;
 }
 
+.test2{
+  position: relative;
+  max-width: 500px;
+}
 .price-title{
+position: absolute;
+  display: inline;
   color:black;
-  text-align: center;
-  padding-top:13px;
+  text-align: right;
+  right: 0
+  
 }
 
 .table-col-name{
@@ -97,12 +109,12 @@ table{
 }
 
 .search-bullets{
-  font-size: 15px;
+  font-size: 16px;
 }
 
 #searchForm {
-  max-width:200px;
-  margin-top:15px;
+  max-width:150px;
+  margin-top:14px;
   background-color: transparent;
   border: none;
   outline: none;
@@ -117,7 +129,7 @@ table{
 #srch-term{
   border: none;
   background: transparent;
-  margin-left: 70px;
+  margin-left: 25px;
 }
 
 .btn.btn-default-1{
@@ -134,4 +146,165 @@ table{
 
 #search-icon{
   padding-top: -15px;
+}
+
+
+.navbar{
+  height:80px;
+  padding-top: 15px;
+}
+
+.navbar.navbar-default{
+  background:rgba(255,255,255,0.5);
+  border: none;
+  z-index:1;
+}
+
+#background {
+    right: 0; bottom: 0;
+min-width: 100%; min-height: 100%;
+width: auto; height: auto; z-index: -1;
+background: url(polina.jpg) no-repeat;
+background-size: cover;
+margin-top: -100px;
+}
+
+@media screen and (max-device-width: 800px) {
+html { background: url(polina.jpg) #000 no-repeat center center fixed; }
+#background { display: none; }
+}
+
+.nav-title{
+  color:black;
+}
+
+.container-fluid {
+  position: relative;
+  max-width: 500px;
+  max-height: 238px;
+  height:100%;
+width:100%;
+
+    
+}
+
+.three-buttons{
+  position: absolute;
+  text-align:right;
+  right: 25px;
+  z-index: 100;
+
+  padding-right: 40px;
+
+}
+.imageone {
+    z-index: 0;
+position: relative;
+
+
+}
+
+.container-fluid.image-one{
+  height: 100%;
+  width: 100%;
+}
+
+
+
+.imagetwo-name{
+display: inline;
+  text-align:left;
+}
+
+.imagetwo{
+  border-radius: 50%;
+  position: absolute;
+  left: 5px;
+  top: 10px;
+  border: 3px solid white;
+  
+}
+
+.imagetwo:hover{
+  border-style: solid;
+  border-width: 3px;
+  border-color: lightblue;
+}
+
+
+.test{
+  position: relative;
+}
+.carousel-caption{
+  
+}
+
+.footer-container{
+  position: relative;
+  bottom: 0;
+  left: 0;
+  z-index: 1000;
+}
+
+#company-footer{
+  margin:auto;
+  text-align:center;
+  display: block;
+  width: 1000px;
+}
+
+
+
+
+.img-mini-carousel{
+  border-radius: 5%;
+  height: 238px !important;
+  width: 500px !important;
+}
+
+
+
+ul#form-ul{
+  list-style-type: none;
+  font-size: 15px;
+  letter-spacing: 2px;
+
+
+}
+
+#form-submit-btn{
+  max-width: 200px;
+text-align:center;background-color:#66cccc;
+border: none;
+height: 40px;
+font-size: 20px;
+}
+  
+.form-control#form-li{
+  width: 350px;
+  border: transparent;
+}
+
+.container#page-header{
+  color:white;
+  letter-spacing: 4px;
+  font-family: courier;
+  background: black;
+  padding: 50px;
+  background:url('http://www.beitoworldcup.com/wp-content/uploads/2014/08/mt-sample-background-1000x200.jpg') no-repeat center top #FFF;
+}
+
+.page-header-1{
+  margin:auto;
+  text-align:center;
+  font-size:20px;
+}
+.container#listing-form{
+ 
+  width: 1000px;
+}
+
+#form-submit-btn-2{
+  margin-top: 10px;
+  margin-left: 15px;  
 }
