--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
 <body>
   
     <!-- Fixed navbar -->
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-default">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -40,14 +40,14 @@
             <span class="icon-bar"></span>
           </button>
             <a class="navbar-brand">
-              <img id="brand-image" alt="kevbnb" src="http://i66.tinypic.com/261hzra.png">
+              <img id="brand-image" alt="kevbnb" src="http://i66.tinypic.com/25gbbdl.png">
           </a>  
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><%= link_to "Home", root_url%></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li> 
+            <li class="nav-title"><%= link_to "Home", root_url%></li>
+            <li class="nav-title"><a href="#about">About</a></li>
+            <li class="nav-title"><a href="#contact">Contact</a></li> 
             <li> 
             
              <form id="searchForm" action="/search/" method="get">
@@ -71,7 +71,7 @@
               <li></li>
                 <li class="dropdown">
                 <%if !current_user.profile.blank?%>
-                  <a href="/profiles/<%=current_user.profile.id%>" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" ><%=current_user.profile.name%> <span class="caret"></span></a>
+                  <a href="/profiles/<%=current_user.profile.id%>" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" >Welcome <span class="caret"></span></a>
                 <% else %>
                  <div class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><p id="welcome">Welcome<span class="caret"></span></p></div>
                 <% end %> 
@@ -103,11 +103,7 @@
       </div>
     </nav>
    
-   <br>
-   <br>
-   <br>
-   <br>
-   <br>
+  
 
      
     
@@ -118,12 +114,12 @@
     
   
 </body>
-    <div class="container-marketing">
-      <footer>
+  
+      <footer class="footer-container">
         <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2016 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+        <p class="company-footer">&copy; 2016 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
       </footer>
-    </div>
+   
 
 <!-- Latest compiled JavaScript -->
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
