--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -4,41 +4,35 @@
 
 
 
-
-
 <div class="container" >
 
-    <h1>KevBnB's listings</h1>
+    <h1 id="kevin-listing">KevBnB's listings</h1>
+   <div  class="text-center"><%= link_to 'New Listing', new_listing_path %></div>
 
     <%if @listings.blank?%>
 
       <h4>You have not listed any listing yet</h4>
 
     <%else%>
-    
-
-
-
-
-
-    
+  
       <div class="table-responsive" id="table-listings">
         <div >
           <table class="table">
             <thead>
               <tr>
                 <th class="col-md-6">Descriptions</th>
-                <th class="col-md-2"></th>
-                <th class="col-md-2">Posted by</th>
-                <th colspan="3" class="col-md-2" id="last-column"></th>
+         
+               
+                <th colspan="6" class="col-md-5"></th>
+              
               </tr>
             </thead>
 
             <tbody>
               <% @listings.each do |listing| %>
                 <tr>
-                    <td>
-                      <h3 class="listing-name"><%= listing.name %></h3>
+                      <td>
+                      <h3 class="listing-name"><a href="/listings/<%=listing.id%>"><%= listing.name.upcase %></a> </h3>
                       
                       <p><b>Type of house:</b><%= listing.home_type %></p>
                       <p><b>Type of room: </b><%= listing.room_type %></p>
@@ -47,48 +41,54 @@
                       <p><b>City: </b><%= listing.city %></p>
                       <p><b>Posted on: </b><%= listing.created_at.strftime("%D")%></p>
                       </td>
-                    <td>
-                      <h4 class="price-title">USD<%= listing.price_per_night%> per night</h4>
-                    </td>
-                      <%if !listing.user.profile.nil?%>
-                         <td class="table-col-name">
-                        
+                   
+                        <%if !listing.user.profile.nil?%>
+                         
+                            <% if listing.pictures.present?%>
+                           
+                              
+                              
+                                  <td >
+                                   
+                                    <div class="test">
+                                     <div class="three-buttons">
+                                      <a href="/listings/<%=listing.id%>"><span class="glyphicon glyphicon-plus-sign" style="color:white"></span></a>
+                                
 
-                         <%= link_to "#{ listing.user.profile.name }", profile_path(listing.user.profile) %>
-                         <br>
-                         <br>
-                         <%= image_tag listing.user.profile.image_url(:medium).to_s, class: "img-circle" %>
-                         </td> 
+                                      <%if can? :update, listing%>
+                                     
+                                       <%= link_to edit_listing_path(listing) do%>
+                                       <span class="glyphicon glyphicon-edit" style="color:white"></span>
+                                      <% end %>
+                                       
+
+                                      <%else%>
+                                        <div></div>
+                                      <%end%>
+
+                                      <%if can? :destroy, listing%>                                       
+                                       <%= link_to listing, method: :delete, data: { confirm: 'Are you sure?' } do %>
+                                       <span class="glyphicon glyphicon-remove" style="color:white"></span>
+                                      <% end %>
+                                            
+                                      <%else%>
+                                          <div></div>
+                                      <%end%>
+                                   </div>
+                                    <div><%= image_tag listing.pictures.first.url(:big).to_s %></div>
+                                    <div><a href="/profiles/<%=listing.user.profile.id%>"><%= image_tag listing.user.profile.image_url(:thumb).to_s, class: "imagetwo" %></a></div>
+                                    </div>
+                                    <div class='test2'>
+                                    <div class="imagetwo-name"><%= link_to "#{ listing.user.profile.name }", profile_path(listing.user.profile) %></div><div class="price-title">USD<%= listing.price_per_night%> per night</div>
+                                    </div>
+                      
+                              </td> 
+                            <%end%>
+                      
                       <%else%>
                           <td class="table-col-name"><%= listing.user.email %></td>
                       <%end%>
 
-                      <% if listing.pictures.blank? %>
-                         <td class="last-column"><%= link_to 'Show', listing %></td>
-                      <% else %>
-                         <td class="last-column"><a href="/listings/<%=listing.id%>"><span class="glyphicon glyphicon-picture"></span></a></td>
-                      <% end %>
-
-                        <%if can? :update, listing%>
-                           <td class="last-column">
-                           <%= link_to edit_listing_path(listing) do%>
-                              <span class="glyphicon glyphicon-edit"></span>
-                           <% end %>
-                          </td>
-
-                        <%else%>
-                           <td class="last-column"></td>
-                        <%end%>
-
-                        <%if can? :destroy, listing%>
-                           <td class="last-column">
-                           <%= link_to listing, method: :delete, data: { confirm: 'Are you sure?' } do %>
-                              <span class="glyphicon glyphicon-remove"></span>
-                           <% end %>
-                              </td>
-                        <%else%>
-                            <td class="last-column"></td>
-                        <%end%>
                   </tr>
               <% end %>
             </tbody>
@@ -98,5 +98,5 @@
     <%end%>
 </div>
   <br>
-<%= will_paginate @listings%><br>
-<%= link_to 'New Listing', new_listing_path %>
+<div class="text-center"><%= will_paginate @listings%><br></div> 
+
