--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Reservations</h1>
+<h1 class="text-center">Listing Reservations</h1>
 
 
 <%if current_user.reservations.blank?%>
