--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -31,8 +31,8 @@
     <%= f.label :image %><br>
     <%= f.file_field :image %>
   </div>
-
+  <br>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Create Profile", class:"btn btn-sm btn-info"%>
   </div>
 <% end %>
