--- a/app/views/reservations/_form.html.erb
+++ b/app/views/reservations/_form.html.erb
@@ -52,7 +52,7 @@
   <br>
   
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Done!", class:"btn btn-sm btn-info"%>
     
   </div>
 
