--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,8 +46,8 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li class="nav-title"><%= link_to "Home", root_url%></li>
-            <li class="nav-title"><a href="#about">About</a></li>
-            <li class="nav-title"><a href="#contact">Contact</a></li> 
+            <li class="nav-title"></li>
+            <li class="nav-title"></li> 
             <li> 
             
              <form id="searchForm" action="/search/" method="get">
