--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <p id="notice"><%= notice %></p>
 
 <p class="img-thumbnail">
@@ -30,6 +31,7 @@
   <%= @profile.user.email %>
 </p>
 <%if can? :update, @profile%>
-  <%= link_to 'Edit', edit_profile_path(@profile) %> 
+  <%= link_to 'Edit', edit_profile_path(@profile), class:"btn btn-info" %> 
 <%end%>
-<%= link_to 'Back', root_path %>
+<%= link_to 'Back', root_path, class:"btn btn-primary" %>
+</div>
