--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -7,7 +7,7 @@
 
 <!-- <source src="polina.webm" type="video/webm"> -->
 
-<source src="background5.mp4.mp4" type="video/mp4">
+<source src="background.mp4.mp4" type="video/mp4">
 
 </video>
 
