--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -13,7 +13,7 @@
 
 
             <div class="carousel-caption" id="caption-1">
-               <h1>At KevBnB, everthing is made easy for you.</h1>
+               <h1>At KevBnB, everything is made easy for you.</h1>
               <h4>As the world's leading accommodations booking portal, we aim to make booking that holiday, easy. So you can forget about spending hours searching for that right place, as our team has curated a list you can trust.</h4>
               <p><a class="btn btn-lg btn-primary" href="/sign_up" role="button">Sign up today</a></p>
             </div>
