--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -1,5 +1,6 @@
 <h1 class="text-center">New Profile</h1>
-
+<div class="container">
 <%= render 'form' %>
 
 <%= link_to 'Back', profiles_path %>
+</div>
