fixed the responsive video

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,21 +1,17 @@
 <!-- /.carousel -->
-<video  muted autoplay loop  id="background">
- <div class="carousel-caption" id="caption-1">
-              <h1>Dream a little. Travel a lot.</h1>
-              <p><a class="btn btn-lg btn-primary" href="/sign_up" role="button">Sign up today</a></p>
-            </div>
 
-<!-- <source src="polina.webm" type="video/webm"> -->
+  <video  muted autoplay loop  class="embed-responsive-item">
 
-<source src="background.mp4.mp4" type="video/mp4">
+    <source src="background.mp4.mp4" type="video/mp4">
 
-</video>
+  </video>
+ 
 
 
             <div class="carousel-caption" id="caption-1">
-               <h1>At KevBnB, everything is made easy for you.</h1>
-              <h4>As the world's leading accommodations booking portal, we aim to make booking that holiday, easy. So you can forget about spending hours searching for that right place, as our team has curated a list you can trust.</h4>
-              <p><a class="btn btn-lg btn-primary" href="/sign_up" role="button">Sign up today</a></p>
+               <h1 class="carousel-caption-1">At KevBnB, everything is made easy for you.</h1>
+              <h4 class="carousel-caption-2">As the world's leading accommodations booking portal, we aim to make booking that holiday, easy. So you can forget about spending hours searching for that right place, as our team has curated a list you can trust.</h4>
+              <p><a class="btn btn-lg btn-primary" href="/sign_up" role="button" id="btn-caption-1">Sign up today</a></p>
             </div>
           
 
