--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -169,6 +169,11 @@ background-size: cover;
 margin-top: -300px;
 }
 
+video {
+  width: 100%    !important;
+  height: auto   !important;
+}
+
 @media screen and (max-device-width: 800px) {
 html { background: url(polina.jpg) #000 no-repeat center center fixed; }
 #background { display: none; }
@@ -235,9 +240,62 @@ display: inline;
 .test{
   position: relative;
 }
-.carousel-caption{
-  
+
+
+@media screen and (max-width: 660px) {
+.carousel-caption{ 
+margin-top:-120px;
 }
+}
+
+@media screen and (max-width: 1190px) {
+.carousel-caption-1{ 
+font-size:20px;
+font-weight:bold;}
+}
+
+@media screen and (max-width: 1190px) {
+.carousel-caption-2{ 
+font-size:10px;}
+}
+
+
+
+
+@media screen and (max-width: 850px) {
+.carousel-caption-1{ 
+font-size:12px;
+font-weight:bold;}
+}
+
+@media screen and (max-width: 850px) {
+.carousel-caption-2{ 
+font-size:6px;}
+}
+
+@media screen and (max-width: 850px) {
+#btn-caption-1{ 
+font-size:10px;
+height:30px;
+weight:50px;}
+}
+
+.embed-responsive-item{
+  margin-top:-200px;
+}
+
+@media screen and (max-width: 850px) {
+.embed-responsive-item{ 
+margin-top:0px;}
+}
+
+@media screen and (max-width: 850px) {
+.jumbotron{ 
+padding:auto;
+margin:auto;
+}
+}
+
 
 .footer-container{
   position: relative;
@@ -281,7 +339,7 @@ font-size: 20px;
 }
   
 .form-control#form-li{
-  width: 350px;
+  max-width: 350px;
   border: transparent;
 }
 
